<resources>
    <string name="app_name">Challenge It</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="created">Created</string>
    <string name="taken">Taken</string>
    <string name="search_hint">Search…</string>
    <string name="user_avatar_desc">User Avatar</string>
    <string name="challenges_statistics">Challenges Statistics</string>
    <string name="accepted_label">Accepted</string>
    <string name="completed_label">Completed</string>
    <string name="failed_label">Failed</string>
    <string name="extra_challenge_id">extra_challenge_id</string>
    <string name="nickname_hint">Nickname</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="log_in_text">Log In</string>
    <string name="log_out_text">Log out</string>
    <string name="cancel_text">Cancel</string>
    <string name="close_text">Close</string>
    <string name="sample_name">Sample Name</string>

    <string name="search">Search</string>
    <string name="my_challenges">My Challenges</string>
    <string name="profile">Profile</string>
    <string name="create">Create</string>
    <string name="placeholder">___</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_requirements">Enter requirements</string>
    <string name="take">Take</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="requirements">Requirements:</string>
    <string name="login_error">Authorization Error</string>

    <string name="token_key">token</string>
    <string name="passwords_mismatch">Passwords do not match!</string>
    <string name="register_error">Registration failed!</string>
    <string name="register_success">Registration was successful!</string>
</resources>