<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/fragment_search"
        android:icon="@drawable/search"
        android:orderInCategory="1"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/fragment_taken_challenges"
        android:checked="true"
        android:icon="@drawable/challenges"
        android:orderInCategory="2"
        android:title="@string/my_challenges"
        app:showAsAction="always" />

    <item
        android:id="@+id/fragment_profile"
        android:icon="@drawable/profile"
        android:orderInCategory="2"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>